# plapre-in-a-browser

./: .gitignore  LICENSE  NOTICE  README.md  package.json
.github/workflows/: deploy-demo.yml  publish.yml
conversion/: README.md  _gated.py  export_clone_encoder.py  export_hift_vocoder.py  export_kanade_decoder.py  export_lm.py  fetch_tokenizer.py  gen_demo_audio.py  gen_num2words_fixtures.py  gen_phase0_golden.py  gen_reference_audio.py  gen_toy_lm.py  hift_onnx.py  precompute_speakers.py  prepare_artifacts.py  pyproject.toml  requirements.txt  smoke_reference.py  tune_temperature.py  validate_e2e.py  validate_lm_golden.py  verify.py
docs/: API.md  ARCHITECTURE.md  EXTENSION.md  INTERFACE.md  PLAN.md  TUNING.md
scripts/: hf-model-card.md  models.sh
web/: README.md  bench.html  index.html  package-lock.json  package.json  phase0.html  phase1.html  phase5.html  tsconfig.build.json  tsconfig.json  vite.config.ts  vite.lib.config.ts  vitest.config.ts
web/public/models/: README.md
web/src/: bench.ts  index.ts  main.ts  phase0.ts  phase1.ts  phase5.ts
web/src/adapters/: elevenlabs.test.ts  elevenlabs.ts  errors.ts  integration.test.ts  openai.test.ts  openai.ts  stream.test.ts  stream.ts  voice-map.ts
web/src/audio/: decode.ts  format.test.ts  format.ts  resample.test.ts  resample.ts  time-stretch.test.ts  time-stretch.ts
web/src/demo/: demo.css  demo.ts
web/src/engine/: engine.test.ts  engine.ts  speech-model.ts  voice.ts
web/src/pipeline/: assets.ts  clone.test.ts  clone.ts  decoder.ts  lm.test.ts  lm.ts  model-cache.test.ts  model-cache.ts  models.ts  (+14 more)
(+1 files in other folders)
